--- a/index.html
+++ b/index.html
@@ -8,9 +8,13 @@ layout: jekyll-theme-minimal
 
 <p>
 <ul>
-<li> My DBLP <a href=https://dblp.uni-trier.de/pers/hd/p/Persiano:Giuseppe.html>entry</a>
+<li>My DBLP <a href=https://dblp.uni-trier.de/pers/hd/p/Persiano:Giuseppe.html>entry</a>
 
-<li> My  Google scholar <a href=https://scholar.google.it/citations?user=wbQQcfQAAAAJ>entry</a>
+<li>My  Google scholar <a href=https://scholar.google.it/citations?user=wbQQcfQAAAAJ>entry</a>
+
+<li><a href=https://github.com/giuper/teaching>Code</a>
+
+<li><a href=https://github.com/giuper/talks>Slide for my talks</a>
 
 </ul>
 
