--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: jekyll-theme-minimal
 ---
 
-<h1>Giuseppe Persiano</h1>
+<h1>Giuseppe AAAersiano</h1>
 <h2>Professor of Computer Science</h2>
 
 <p>
