--- a/index.html
+++ b/index.html
@@ -2,18 +2,14 @@
 layout: jekyll-theme-minimal
 ---
 
-<h1>Giuseppe AAAersiano</h1>
+<h1>Giuseppe Persiano</h1>
 <h2>Professor of Computer Science</h2>
 
 <p>
 <ul>
 <li>My DBLP <a href=https://dblp.uni-trier.de/pers/hd/p/Persiano:Giuseppe.html>entry</a>
-
 <li>My  Google scholar <a href=https://scholar.google.it/citations?user=wbQQcfQAAAAJ>entry</a>
-
 <li><a href=https://github.com/giuper/teaching>Code</a>
-
-<li><a href=https://github.com/giuper/talks>Slide for my talks</a>
-
+<li><a href=https://github.com/giuper/talks>Slide for my talks</
 </ul>
 
