--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@ layout: jekyll-theme-minimal
 <li>My DBLP <a href=https://dblp.uni-trier.de/pers/hd/p/Persiano:Giuseppe.html>entry</a>
 <li>My  Google scholar <a href=https://scholar.google.it/citations?user=wbQQcfQAAAAJ>entry</a>
 <li><a href=https://github.com/giuper/teaching>Code</a>
-<li><a href=https://github.com/giuper/talks>Slide for my talks</
+  <li><a href=https://github.com/giuper/talks>Slide for my talks</a>
 </ul>
 
