--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@ layout: jekyll-theme-minimal
 
 <p>
 <ul>
-<li>My  Google scholar <a href=https://scholar.google.it/citations?user=wbQQcfQAAAAJ>entry</a>
+<li>My Google scholar <a href=https://scholar.google.it/citations?user=wbQQcfQAAAAJ>entry</a>
 <li>My DBLP <a href=https://dblp.uni-trier.de/pers/hd/p/Persiano:Giuseppe.html>entry</a>
+<li>Ciao
 
 </ul>
 
