--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@ layout: default
 <h1>Giuseppe Persiano</h1>
 <h2>Professor of Computer Science</h2>
 
-aaa
-
 <p>
 <ul>
 <li>My Google scholar <a href=https://scholar.google.it/citations?user=wbQQcfQAAAAJ>entry</a>
 <li>My DBLP <a href=https://dblp.uni-trier.de/pers/hd/p/Persiano:Giuseppe.html>entry</a>
-<li>Ciao
+<li><a href=https://github.com/giuper/teaching>Code</a> related to my classes
+<li><a href=https://github.com/giuper/talks>Talks</a>
 </ul>
 
