--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@ layout: default
 <li>My Google scholar <a href=https://scholar.google.it/citations?user=wbQQcfQAAAAJ>entry</a>
 <li>My DBLP <a href=https://dblp.uni-trier.de/pers/hd/p/Persiano:Giuseppe.html>entry</a>
 <li><a href=https://github.com/giuper/teaching>Code</a> related to my classes
-<li><a href=https://github.com/giuper/talks>Talks</a>
+<li><a href=talks.html>Talks</a>
 </ul>
 
