technical talk added

--- a/talks.html
+++ b/talks.html
@@ -3,9 +3,8 @@ layout: default
 ---
 
 <h1>Giuseppe Persiano</h1>
-<h2>Professor of Computer Science</h2>
+<h2>Talks:</h2>
 
-Talks:
 <ul>
 <li><a href=Technical>Technical</a> talks
 <li><a href=NonTechnical>NonTechnical</a> talks
