--- a/index.html
+++ b/index.html
@@ -2,8 +2,24 @@
 layout: default
 ---
 
-<h1>Giuseppe Persiano</h1>
-<h2>Professor of Computer Science</h2>
+I am a professor of Computer Science at the 
+Dipartimento di Scienze Aziendali -- Management of Innovation Systems of the
+<a href=https://web.unisa.it/en/home>Universit&agrave; di Salerno</a>.
+
+<br>
+I got my <i>Laurea in Science dell'Informazione</i> cum laude, 1986 from
+Salerno, my M.Sc. in Computer Science from Harvard University in 1988,
+and my Ph.D. in Computer Science from Harvard University in 1992.
+
+<br>
+I have been an Associate Professor of Computer Science at the 
+<i>Dipartimento di Matematica</i> of the Universit&agrave; di Catania from 1992 to 1994. 
+Then I moved to Salerno as a Professor of Computer Science.
+
+<br>
+My main research area is Theoretical Computer Science with a special focus
+on Cryptography.
+
 
 <p>
 <ul>
