--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ Dipartimento di Scienze Aziendali -- Management of Innovation Systems of the
 <a href=https://web.unisa.it/en/home>Universit&agrave; di Salerno</a>.
 
 <p>
-I got my <i>Laurea in Science dell'Informazione</i> cum laude, 1986 from
+I got my <i>Laurea in Science dell'Informazione</i> cum laude, in 1986 from
 Salerno, my M.Sc. in Computer Science from Harvard University in 1988,
 and my Ph.D. in Computer Science from Harvard University in 1992.
 
