--- a/talks.html
+++ b/talks.html
@@ -2,8 +2,8 @@
 layout: default
 ---
 
-<h1>Giuseppe Persiano</h1>
-<h2>Talks:</h2>
+<h1>Talks:</h1>
+Here you will slides for some of my talks
 
 <ul>
 <li><a href=Technical>Technical</a> talks
