--- a/Technical/index.html
+++ b/Technical/index.html
@@ -6,7 +6,7 @@ layout: default
 <h2>Technical talks:</h2>
 
 <ul>
-<li> <a href=https://github.com/giuper/talks/blob/master/Technical/icerm.pdf>Lower bound on encrypted multimaps</a>
+<li> <a href=./slides/icerm.pdf>Lower bound on encrypted multimaps</a>
     <br>
     presented at the
         <a href=https://icerm.brown.edu/topical_workshops/tw19-1-es/>ICERM workshop on Encrypted Search, Jun 10 - 14, 2019</a>
