--- a/Technical/index.html
+++ b/Technical/index.html
@@ -10,6 +10,7 @@ layout: default
     <br>
     presented at the
         <a href=https://icerm.brown.edu/topical_workshops/tw19-1-es/>ICERM workshop on Encrypted Search, Jun 10 - 14, 2019</a>
+<br>Joint work with Sarvar Patel and Kevin Yeo
 
 </ul>
 
