--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@ Dipartimento di Scienze Aziendali -- Management of Innovation Systems of the
 I got my <i>Laurea in Science dell'Informazione</i> cum laude, in 1986 from
 Salerno, my M.Sc. in Computer Science from Harvard University in 1988,
 and my Ph.D. in Computer Science from Harvard University in 1992.
+Between Salerno and Harvard, I worked for Olivetti, in Ivrea, Italy.
 </p>
 
 <p>
