--- a/index.html
+++ b/index.html
@@ -34,3 +34,10 @@ on Cryptography.
 <li><a href=talks.html>Talks</a>
 </ul>
 
+<hr>
+<b>Current activities</b>
+<ul>
+<li> Attending <a href=https://cryptolowerbounds.wordpress.com/>Lower Bounds in Cryptography</a>. Bertinoro, July 7-12.
+<li> Organizing <a href=http://odsa.unisa.it>ODSA: Oblivious Data Structures and Algorithms</a>. Bertinoro, July 14-17.
+</ul>
+
