--- a/index.html
+++ b/index.html
@@ -28,8 +28,6 @@ on Cryptography.
 
 <p>
 <ul>
-<li>My Google scholar <a href=https://scholar.google.it/citations?user=wbQQcfQAAAAJ>entry</a>
-<li>My DBLP <a href=https://dblp.uni-trier.de/pers/hd/p/Persiano:Giuseppe.html>entry</a>
 <li><a href=https://github.com/giuper/teaching>Code</a> related to my classes
 <li><a href=talks.html>Talks</a>
 </ul>
@@ -37,6 +35,9 @@ on Cryptography.
 <hr>
 <b>Current activities</b>
 <ul>
-<li> Attending <a href=https://cryptolowerbounds.wordpress.com/>Lower Bounds in Cryptography</a>. Bertinoro, July 7-12.
+<li> Attending the <a href=https://icerm.brown.edu/topical_workshops/tw19-1-es/>ICERM workshop on Encrypted Search</a>.
+Providence, RI, June 10-14, 2019.
+<li> Attending the <a href=https://sigmod2019.org/>ACM SIGMOD/PODS</a> conference. Amsterdam, June 30-July 5.
+<li> Attending the <a href=https://cryptolowerbounds.wordpress.com/>Lower Bounds in Cryptography</a> workshop. Bertinoro, July 7-12.
 <li> Organizing <a href=http://odsa.unisa.it>ODSA: Oblivious Data Structures and Algorithms</a>. Bertinoro, July 14-17.
 </ul>
