--- a/index.html
+++ b/index.html
@@ -41,3 +41,13 @@ Providence, RI, June 10-14, 2019.
 <li> Attending the <a href=https://cryptolowerbounds.wordpress.com/>Lower Bounds in Cryptography</a> workshop. Bertinoro, July 7-12.
 <li> Organizing the <a href=http://odsa.unisa.it>ODSA: Oblivious Data Structures and Algorithms</a> workshop. Bertinoro, July 14-17.
 </ul>
+
+<hr>
+<b>Program Committees</b>
+<ul>
+<li>
+<a href=https://crypto.iacr.org/2019/>CRYPTO 19</a>: conference August 17.
+<a href=http://wine2019.cs.columbia.edu/>WINE 2019: The 15th Conference on Web and Internet Economics</a>: submissions under review.
+<a href=https://ccsw.io/>The ACM Cloud Computing Security Workshop CCSW 19</a>: submissions due August 1
+</ul>
+
