--- a/index.html
+++ b/index.html
@@ -50,6 +50,6 @@ Providence, RI, June 10-14, 2019.
 <li>
 <a href=http://wine2019.cs.columbia.edu/>WINE 2019: The 15th Conference on Web and Internet Economics</a>: submissions under review.
 <li>
-<a href=https://ccsw.io/>The ACM Cloud Computing Security Workshop CCSW 19</a>: submissions due August 1
+<a href=https://ccsw.io/>The ACM Cloud Computing Security Workshop CCSW 19</a>: submissions under review.
 </ul>
 
