Adding CCSW list of papers

--- a/index.html
+++ b/index.html
@@ -52,6 +52,6 @@ Providence, RI, June 10-14, 2019.
 <li>
 <a href=http://wine2019.cs.columbia.edu/>WINE 2019: The 15th Conference on Web and Internet Economics</a>: submissions under review.
 <li>
-<a href=https://ccsw.io/>The ACM Cloud Computing Security Workshop CCSW 19</a>: submissions under review.
+<a href=https://ccsw.io/>The ACM Cloud Computing Security Workshop CCSW 19</a>: list of accepted papers published.
 </ul>
 
