--- a/talks.html
+++ b/talks.html
@@ -3,10 +3,10 @@ layout: default
 ---
 
 <h1>Talks:</h1>
-Here you will slides for some of my talks
+Here you will find slides for some of my talks
 
 <ul>
 <li><a href=Technical>Technical</a> talks
-<li><a href=NonTechnical>NonTechnical</a> talks
+<li><a href=nonTechnical>NonTechnical</a> talks
 </ul>
 
