--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ Providence, RI, June 10-14, 2019.
 <li> Attending the <a href=https://cryptolowerbounds.wordpress.com/>Lower Bounds in Cryptography</a> workshop. Bertinoro, July 7-12.
 <li> Organizing the <a href=http://odsa.unisa.it>ODSA: Oblivious Data Structures and Algorithms</a> workshop. Bertinoro, July 14-17.
 <li> Panelist on <i>Present and future of Theoretical Computer Science (not only) in Italy </i> at the <a href=https://disat.uninsubria.it/~simone.tini/ICTCS/program.html>20th Italian Conference on Computer Science</a>.
-
+<li> Attending the <a href=https://www.sigsac.org/ccs/CCS2019/>ACM CCS 2019</a> conference
 </ul>
 
 <hr>
