--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@ Providence, RI, June 10-14, 2019.
 <li>
 <a href=https://crypto.iacr.org/2019/>CRYPTO 19</a>: conference August 17.
 <li>
-<a href=http://wine2019.cs.columbia.edu/>WINE 2019: The 15th Conference on Web and Internet Economics</a>: submissions under review.
+<a href=http://wine2019.cs.columbia.edu/>WINE 2019: The 15th Conference on Web and Internet Economics</a>: list of accepted papers published.
 <li>
-<a href=https://ccsw.io/>The ACM Cloud Computing Security Workshop CCSW 19</a>: list of accepted papers published.
+<a href=https://ccsw.io/>The ACM Cloud Computing Security Workshop CCSW 19</a>: taking place, November 11.
 </ul>
 
