--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ on Cryptography.
 
 <p>
 <ul>
-<li><a href=https://github.com/giuper/teaching>Code</a> related to my classes
+<li><a href=https://github.com/giuper/teaching>Teaching</a>
 <li><a href=talks.html>Talks</a>
 </ul>
 
