--- a/index.html
+++ b/index.html
@@ -53,5 +53,6 @@ Providence, RI, June 10-14, 2019.
 <a href=http://wine2019.cs.columbia.edu/>WINE 2019: The 15th Conference on Web and Internet Economics</a>: list of accepted papers published.
 <li>
 <a href=https://ccsw.io/>The ACM Cloud Computing Security Workshop CCSW 19</a>: taking place, November 11.
+<a href=https://econcs.pku.edu.cn/icalp2020/>ICALP 2020</a>
 </ul>
 
