--- a/index.html
+++ b/index.html
@@ -54,6 +54,6 @@ Providence, RI, June 10-14, 2019.
 <li>
 <a href=https://ccsw.io/>The ACM Cloud Computing Security Workshop CCSW 19</a>: taking place, November 11.
 <li>
-<a href=https://econcs.pku.edu.cn/icalp2020/>ICALP 2020</a>: submission Feb. 18, 2020.
+<a href=https://econcs.pku.edu.cn/icalp2020/>ICALP 2020</a>: acceptance/rejection letters are out, April 17.
 </ul>
 
