--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@ My main research area is Theoretical Computer Science with a special focus
 on Cryptography.
 </p>
 
+<p><a href=https://drive.google.com/file/d/1OQg2dxPu-x-RZzETlpV3lFa259Nrpk1J/view">Joint statement</a> on tracing apps.
+
 <p>
 <ul>
 <li><a href=https://github.com/giuper/teaching>Teaching</a>
