--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ My main research area is Theoretical Computer Science with a special focus
 on Cryptography.
 </p>
 
-<p><a href=JointStatement.pdf">Joint Statement</a> on tracing apps.
+<p><a href=JointStatement.pdf>Joint Statement</a> on tracing apps.
 
 <p>
 <ul>
