--- a/index.html
+++ b/index.html
@@ -58,5 +58,8 @@ Providence, RI, June 10-14, 2019.
 <a href=https://ccsw.io/>The ACM Cloud Computing Security Workshop CCSW 19</a>: taking place, November 11.
 <li>
 <a href=https://econcs.pku.edu.cn/icalp2020/>ICALP 2020</a>: acceptance/rejection letters are out, April 17.
+<li>
+<a href=https://https://scn.unisa.it/>SCN 2020</a>:
+submissions are in! 
 </ul>
 
