--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ Providence, RI, June 10-14, 2019.
 <li>
 <a href=https://econcs.pku.edu.cn/icalp2020/>ICALP 2020</a>: acceptance/rejection letters are out, April 17.
 <li>
-<a href=https://https://scn.unisa.it/>SCN 2020</a>:
+<a href=https://scn.unisa.it/>SCN 2020</a>:
 submissions are in! 
 </ul>
 
