--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@ Providence, RI, June 10-14, 2019.
 <li> Organizing the <a href=http://odsa.unisa.it>ODSA: Oblivious Data Structures and Algorithms</a> workshop. Bertinoro, July 14-17, 2019.
 <li> Panelist on <i>Present and future of Theoretical Computer Science (not only) in Italy </i> at the <a href=https://disat.uninsubria.it/~simone.tini/ICTCS/program.html>20th Italian Conference on Computer Science</a>.
 <li> Attending the <a href=https://www.sigsac.org/ccs/CCS2019/>ACM CCS 2019</a> conference. London, November 11-15, 2019.
+<li> At home, trying to avoid COVID-19. Salerno, March-May, 2020.
 </ul>
 
 <hr>
