--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+---
+layout: default
+---
+
 <p>
 I am a professor of Computer Science at the 
 Dipartimento di Scienze Aziendali -- Management of Innovation Systems of the
