--- a/index.html
+++ b/index.html
@@ -61,6 +61,6 @@ Providence, RI, June 10-14, 2019.
 <a href=https://econcs.pku.edu.cn/icalp2020/>ICALP 2020</a>: acceptance/rejection letters are out, April 17.
 <li>
 <a href=https://scn.unisa.it/>SCN 2020</a>:
-submissions are in! 
+acceptance/rejection letters are out. 
 </ul>
 
