--- a/Technical/index.html
+++ b/Technical/index.html
@@ -11,6 +11,11 @@ layout: default
         <a href=https://icerm.brown.edu/topical_workshops/tw19-1-es/>ICERM workshop on Encrypted Search, Jun 10 - 14, 2019</a>
 <br>Joint work with Sarvar Patel and Kevin Yeo
 
+<li> <a href=./slides/volumeH.pdf>Volume Hiding Static Encrypted Multi-Maps</a>
+    <br>
+    presented at the Google Private Computing Tech Talks 
+<br>Joint work with Sarvar Patel, Kevin Yeo, and Moti Yung
+
 </ul>
 
 
