date to GPC talk

--- a/Technical/index.html
+++ b/Technical/index.html
@@ -13,7 +13,7 @@ layout: default
 
 <li> <a href=./slides/volumeH.pdf>Volume Hiding Static Encrypted Multi-Maps</a>
     <br>
-    presented at the Google Private Computing Tech Talks 
+    presented at the Google Private Computing Tech Talks, August 6, 2020
 <br>Joint work with Sarvar Patel, Kevin Yeo, and Moti Yung
 
 </ul>
