--- a/index.html
+++ b/index.html
@@ -49,6 +49,15 @@ Providence, RI, June 10-14, 2019.
 </ul>
 
 <hr>
+<b>Recent Papers</b>
+<ul>
+<li>
+<i>Leakage Cell Probe Model: Lower Bounds for Key-Equality Mitigation in Encrypted Multi-Maps.</i>
+<a href=https://dblp.uni-trier.de/db/journals/iacr/iacr2019.html#PatelPY19a>ePrint 2019-1132</a>. Accepted to CRYPTO 20
+</ul>
+
+
+<hr>
 <b>Program Committees</b>
 <ul>
 <li>
