--- a/index.html
+++ b/index.html
@@ -52,8 +52,20 @@ Providence, RI, June 10-14, 2019.
 <b>Recent Papers</b>
 <ul>
 <li>
-<i>Leakage Cell Probe Model: Lower Bounds for Key-Equality Mitigation in Encrypted Multi-Maps.</i>
-<a href=https://dblp.uni-trier.de/db/journals/iacr/iacr2019.html#PatelPY19a>ePrint 2019-1132</a>. Accepted to CRYPTO 20
+<i> Lower Bounds for Encrypted Multi-Maps and Searchable Encryption in the Leakage Cell Probe Mode</i>
+<a href=https://eprint.iacr.org/2019/1132</a>ePrint 2019-1132</a>
+Accepted to CRYPTO 20.
+
+<p
+We present  strong  evidence  that  the  leakage  of  the  global  key-equality  pattern  is  inherent  for  any  dynamic EMM construction with O(1) efficiency.
+In particular,  we consider the slightly smaller leakage 
+where leakage of key-equality between update and query operations is
+decoupled and the adversary only learns whether two operations of the
+same type are performed on the same key or not. 
+We show that any EMM with at most decoupled key-equality pattern leakage incurs
+&Omega;(log n) overhead in the leakage cell probe model. 
+This is tight as there exist ORAM-based constructions of EMMs with logarithmic slowdown that leak no more than the decoupled key-equality pattern (and actually, much less).
+</p>
 </ul>
 
 
