--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ Providence, RI, June 10-14, 2019.
 <ul>
 <li>
 <i> Lower Bounds for Encrypted Multi-Maps and Searchable Encryption in the Leakage Cell Probe Mode</i>
-<a href=https://eprint.iacr.org/2019/1132</a>ePrint 2019-1132</a>
+<a href=https://eprint.iacr.org/2019/1132>ePrint 2019-1132</a>
 Accepted to CRYPTO 20.
 
 <p
