--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ Between Salerno and Harvard, I worked for Olivetti, in Ivrea, Italy.
 
 <p>
 I have been an Associate Professor of Computer Science at the 
-<i>Dipartimento di Matematica</i> of the Universit&agrave; di Catania from 1992 to 1994. 
+<i>Dipartimento di Matematica</i> of the Universit&agrave; di Catania, Catania, Italy, from 1992 to 1994. 
 Then I moved to Salerno as a Professor of Computer Science.
 </p>
 
