--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 layout: default
 ---
 
+<script src="js/abstract.js" type="text/javascript"></script>
+
 <p>
 I am a professor of Computer Science at the 
 Dipartimento di Scienze Aziendali -- Management of Innovation Systems of the
