--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@ layout: default
 ---
 
 <script src="js/abstract.js" type="text/javascript"></script>
+<style>
+    .abstract {padding:3pt}
+</style>
 
 <p>
 I am a professor of Computer Science at the 
@@ -57,8 +60,10 @@ Providence, RI, June 10-14, 2019.
 <i> Lower Bounds for Encrypted Multi-Maps and Searchable Encryption in the Leakage Cell Probe Mode</i>
 <a href=https://eprint.iacr.org/2019/1132>ePrint 2019-1132</a>
 Accepted to CRYPTO 20.
+<br>[<a href="javascript:toggle('abstract1');">Show/Hide abstract</a>]
 
 <p>
+<div class="abstract" id="abstract1" style="display:none;">
 We present  strong  evidence  that  the  leakage  of  the  global  key-equality  pattern  is  inherent  for  any  dynamic EMM construction with O(1) efficiency.
 In particular,  we consider the slightly smaller leakage 
 where leakage of key-equality between update and query operations is
@@ -67,7 +72,7 @@ same type are performed on the same key or not.
 We show that any EMM with at most decoupled key-equality pattern leakage incurs
 &Omega;(log n) overhead in the leakage cell probe model. 
 This is tight as there exist ORAM-based constructions of EMMs with logarithmic slowdown that leak no more than the decoupled key-equality pattern (and actually, much less).
-</p>
+</div>
 </ul>
 
 
