--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@ Providence, RI, June 10-14, 2019.
 <b>Recent Papers</b>
 <ul>
 <li>
-<i> Lower Bounds for Encrypted Multi-Maps and Searchable Encryption in the Leakage Cell Probe Mode</i>
-<a href=https://eprint.iacr.org/2019/1132>ePrint 2019-1132</a>
+<i> Lower Bounds for Encrypted Multi-Maps and Searchable Encryption in the Leakage Cell Probe Mode</i>.
+<a href=https://eprint.iacr.org/2019/1132>ePrint 2019-1132</a>.
 Accepted to CRYPTO 20.
 <br>[<a href="javascript:toggle('abstract1');">Show/Hide abstract</a>]
 
