--- a/index.html
+++ b/index.html
@@ -59,8 +59,7 @@ Providence, RI, June 10-14, 2019.
 <li>
 <i> Lower Bounds for Encrypted Multi-Maps and Searchable Encryption in the Leakage Cell Probe Mode</i>.
 <a href=https://eprint.iacr.org/2019/1132>ePrint 2019-1132</a>.
-Accepted to CRYPTO 20.
-<br>[<a href="javascript:toggle('abstract1');">Show/Hide abstract</a>]
+Accepted to CRYPTO 20. [<a href="javascript:toggle('abstract1');">Show/Hide abstract</a>]
 
 <p>
 <div class="abstract" id="abstract1" style="display:none;">
