--- a/index.html
+++ b/index.html
@@ -28,11 +28,10 @@ Then I moved to Salerno as a Professor of Computer Science.
 </p>
 
 <p>
-My main research area is Theoretical Computer Science with a special focus
-on Cryptography.
+My main research area is Theoretical Computer Science with a special focus on Cryptography.
 </p>
 
-<p><a href=JointStatement.pdf>Joint Statement</a> on tracing apps, April 19, 2020.
+<p><a href=JointStatement.pdf>Joint Statement</a> on Tracing Apps, April 19, 2020.
 
 <p>
 <ul>
