--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ Then I moved to Salerno as a Professor of Computer Science.
 My main research area is Theoretical Computer Science with a special focus on Cryptography.
 </p>
 
-<p><a href=JointStatement.pdf>Joint Statement</a> on Tracing Apps, April 19, 2020.
+<p><a href=JointStatement.pdf>Joint Statement</a> on tracing apps, April 19, 2020.
 
 <p>
 <ul>
