--- a/talks.html
+++ b/talks.html
@@ -7,6 +7,6 @@ Here you will find slides for some of my talks
 
 <ul>
 <li><a href=Technical>Technical</a> talks
-<li><a href=nonTechnical>NonTechnical</a> talks
+<li><a href=nonTechnical>Non-Technical</a> talks
 </ul>
 
