--- a/index.html
+++ b/index.html
@@ -87,7 +87,13 @@ This is tight as there exist ORAM-based constructions of EMMs with logarithmic s
 <a href=https://econcs.pku.edu.cn/icalp2020/>ICALP 2020</a>: acceptance/rejection letters are out, April 17.
 <li>
 <a href=https://scn.unisa.it/>SCN 2020</a>:
-acceptance/rejection letters are out. 
+Conference is taking place online.
+Video presentations are available 
+<a href=https://scn.unisa.it/index.php/conference-program-sept-14/>here</a>, 
+<a href=https://scn.unisa.it/index.php/conference-program-sept-15/>here</a>, ,
+and
+<a href=https://scn.unisa.it/index.php/conference-program-sept-16/>here</a>. 
+
 </ul>
 
 
