--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ This is tight as there exist ORAM-based constructions of EMMs with logarithmic s
 Conference is taking place online.
 Video presentations are available 
 <a href=https://scn.unisa.it/index.php/conference-program-sept-14/>here</a>, 
-<a href=https://scn.unisa.it/index.php/conference-program-sept-15/>here</a>, ,
+<a href=https://scn.unisa.it/index.php/conference-program-sept-15/>here</a>,
 and
 <a href=https://scn.unisa.it/index.php/conference-program-sept-16/>here</a>. 
 
