--- a/index.html
+++ b/index.html
@@ -94,7 +94,11 @@ Video presentations are available
 and
 <a href=https://scn.unisa.it/index.php/conference-program-sept-16/>here</a>. 
 
-<li>  <a  href=https://aamas2021.soton.ac.uk/>20th International Conference on Autonomous Agents and Multiagent Systems (AAMAS)</a>: reviewing
+<li>  <a  href=https://aamas2021.soton.ac.uk/>20th International Conference on Autonomous Agents and Multiagent Systems (AAMAS)</a>: reviewing.
+
+The conference will be a fully virtual event, 
+at the dates announced originally (3-7 May 2021).
+
 
     
 </ul>
