--- a/index.html
+++ b/index.html
@@ -101,6 +101,8 @@ and
 The conference will be a fully virtual event, 
 at the dates announced originally (3-7 May 2021).
 
+<li> <a href=https://conf.jnu.edu.cn/>Invited speaker at Inscrypt2020</a>
+
 
     
 </ul>
