--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@ My main research area is Theoretical Computer Science with a special focus on Cr
 </p>
 
 <p><a href=JointStatement.pdf>Joint Statement</a> on tracing apps, April 19, 2020.
+<p><a href=https://github.com/DP-3T/documents>DP-3T</a>
 
 <p>
 <ul>
