--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@ My main research area is Theoretical Computer Science with a special focus on Cr
 
 <p>
 <ul>
-<li><a href=https://github.com/giuper/teaching>Teaching</a>
+<li><a href=https://github.com/giuper/teaching>Old classes</a>
+<li><a href=https://github.com/giuper/Block21>Blockchains (Fall 21)</a>
 <li><a href=talks.html>Talks</a>
 </ul>
 
