--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@ My main research area is Theoretical Computer Science with a special focus on Cr
 <ul>
 <li><a href=https://github.com/giuper/teaching>Old classes</a>
 <li><a href=https://github.com/giuper/Block21>Blockchains (Fall 21)</a>
+<li><a href=https://github.com/giuper/Algo21>Algoritmi e Strutture Dati (Fall 21)</a>
 <li><a href=talks.html>Talks</a>
 </ul>
 
