--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@ layout: default
 </style>
 
 <p>
-I am a professor of Computer Science at the 
-Dipartimento di Scienze Aziendali -- Management of Innovation Systems of the
+I am a professor of Computer Science at the Dipartimento di Scienze Aziendali -- Management of Innovation Systems of the
 <a href=https://web.unisa.it/en/home>Universit&agrave; di Salerno</a>, Salerno, Italy.
 </p>
 
