--- a/index.html
+++ b/index.html
@@ -60,7 +60,11 @@ and Cryptography. Salerno, October-December 2020.
 <b>Recent Papers</b>
 <ul>
 <li>
-<i>Limits of Preprocessing for Single-Server PIR</i>
+<i>Anamorphic Encryption: Private Communication against a Dictator</i>.
+Eurocrypt 2022.
+
+<li>
+<i>Limits of Preprocessing for Single-Server PIR.</i>
 <a href=https://eprint.iacr.org/2022/235.pdf>SODA 22.</a>
 [<a href="javascript:toggle('abstract3');">Show/Hide abstract</a>]
 <div class="abstract" id="abstract3" style="display:none;">
@@ -86,7 +90,7 @@ adversary that is critical to proving our higher lower bounds.
 </div>
 
 <li>
-<i>Efficient Boolean Search over Encrypted Data with Reduced Leakage</i>
+<i>Efficient Boolean Search over Encrypted Data with Reduced Leakage.</i>
 <a href=https://eprint.iacr.org/2021/1227>ASIACRYPT 21.</a>
 [<a href="javascript:toggle('abstract2');">Show/Hide abstract</a>]
 <div class="abstract" id="abstract2" style="display:none;">
