--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ This is tight as there exist ORAM-based constructions of EMMs with logarithmic s
 <li>
 <a href=https://econcs.pku.edu.cn/icalp2020/>ICALP 2020</a>: acceptance/rejection letters are out, April 17.
 <li>
-<a href=https://scn.unisa.it/>SCN 2020</a>:
+<a href=https://scn.unisa.it/scn20/>SCN 2020</a>:
 Conference took place online.
 Video presentations are available 
 <a href=https://scn.unisa.it/index.php/conference-program-sept-14/>here</a>, 
@@ -147,6 +147,9 @@ The conference will be a fully virtual event,
 at the dates announced originally (3-7 May 2021).
 
 <li> <a href=https://conf.jnu.edu.cn/>Invited speaker at Inscrypt2020</a>
+<li>
+<a href=https://scn.unisa.it/scn22/>SCN 2022</a>:
+some many good submissions! bidding for papers!
 
 
     
