--- a/index.html
+++ b/index.html
@@ -61,7 +61,17 @@ and Cryptography. Salerno, October-December 2020.
 <ul>
 <li>
 <i>Anamorphic Encryption: Private Communication against a Dictator</i>.
-Eurocrypt 2022.
+<a href=https://ia.cr/2022/639>Eurocrypt 2022</a>
+<br>
+[<a href="javascript:toggle('abstract4');">Show/Hide abstract</a>]
+<div class="abstract" id="abstract4" style="display:none;">
+Cryptosystems have been developed over the years under the typical prevalent setting which assumes that the receiver’s key is kept secure from the adversary, and that the choice of the message to be sent is freely performed by the sender and is kept secure from the adversary as well. Under these fundamental and basic operational assumptions, modern Cryptography has flourished over the last half a century or so, with amazing achievements: New systems (including public-key Cryptography), beautiful and useful models (including security definitions such as semantic security), and new primitives (such as zero-knowledge proofs) have been developed. Furthermore, these fundamental achievements have been translated into actual working systems, and span many of the daily human activities over the Internet.
+
+However, in recent years, there is an overgrowing pressure from many governments to allow the government itself access to keys and messages of encryption systems (under various names: escrow encryption, emergency access, communication decency acts, etc.). Numerous non-direct arguments against such policies have been raised, such as "the bad guys can utilize other encryption system" so all other cryptosystems have to be declared illegal, or that "allowing the government access is an ill-advised policy since it creates a natural weak systems security point, which may attract others (to masquerade as the government)." It has remained a fundamental open issue, though, to show directly that the above mentioned efforts by a government (called here “a dictator” for brevity) which mandate breaking of the basic operational assumption (and disallowing other cryptosystems), is, in fact, a futile exercise. This is a direct technical point which needs to be made and has not been made to date.
+
+In this work, as a technical demonstration of the futility of the dictator’s demands, we invent the notion of “Anamorphic Encryption” which shows that even if the dictator gets the keys and the messages used in the system (before anything is sent) and no other system is allowed, there is a covert way within the context of well established public-key cryptosystems for an entity to immediately (with no latency) send piggybacked secure messages which are, in spite of the stringent dictator conditions, hidden from the dictator itself! We feel that this may be an important direct technical argument against the nature of governments’ attempts to police the use of strong cryptographic systems, and we hope to stimulate further works in this direction.
+</div>
+
 
 <li>
 <i>Limits of Preprocessing for Single-Server PIR.</i>
@@ -118,6 +128,7 @@ We show that any EMM with at most decoupled key-equality pattern leakage incurs
 &Omega;(log n) overhead in the leakage cell probe model. 
 This is tight as there exist ORAM-based constructions of EMMs with logarithmic slowdown that leak no more than the decoupled key-equality pattern (and actually, much less).
 </div>
+
 </ul>
 
 
@@ -149,7 +160,9 @@ at the dates announced originally (3-7 May 2021).
 <li> <a href=https://conf.jnu.edu.cn/>Invited speaker at Inscrypt2020</a>
 <li>
 <a href=https://scn.unisa.it/scn22/>SCN 2022</a>:
-some many good submissions! bidding for papers!
+so many good submissions! bidding for papers!
+<li>
+Going to <a href=https://eurocrypt.iacr.org/2022/>Eurocrypt 2022</a> in Trondheim, Norway.
 
 
     
