--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ Providence, RI, June 10-14, 2019.
 <li> Still at home, trying to avoid COVID-19 while teaching Algorithms 
 and Cryptography. Salerno, October-December 2020.
 <li>
-Going to <a href=https://eurocrypt.iacr.org/2022/>Eurocrypt 2022</a> in Trondheim, Norway.
+Going to <a href=https://eurocrypt.iacr.org/2022/>Eurocrypt 2022</a> in Trondheim, Norway. [<a href=https://github.com/giuper/talks/blob/master/Technical/anamorphic.pdf>Slides</a>]
 </ul>
 
 <hr>
