--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@ Providence, RI, June 10-14, 2019.
 and Cryptography. Salerno, October-December 2020.
 <li>
 Going to <a href=https://eurocrypt.iacr.org/2022/>Eurocrypt 2022</a> in Trondheim, Norway. [<a href=https://github.com/giuper/talks/blob/master/Technical/anamorphic.pdf>Slides</a>]
+<li>Teaching at the <a href=https://sites.google.com/uniurb.it/fosad/home/fosad-2022>FOSAD School</a>, August 29-September 2, 2022, 
+in beatiful Bertinoro.
 </ul>
 
 <hr>
@@ -162,8 +164,9 @@ at the dates announced originally (3-7 May 2021).
 <li> <a href=https://conf.jnu.edu.cn/>Invited speaker at Inscrypt2020</a>
 <li>
 <a href=https://scn.unisa.it/scn22/>SCN 2022</a>:
-so many good submissions! bidding for papers!
+so many good submissions! bidding for papers! program is out!
 
+<li> EUROCRYPT 2023
 
     
 </ul>
