--- a/index.html
+++ b/index.html
@@ -140,8 +140,6 @@ This is tight as there exist ORAM-based constructions of EMMs with logarithmic s
 <b>Program Committees</b>
 <ul>
 <li>
-<a href=https://eurocrypt.iacr.org/2023//>Eurocrypt 23</a>: reviewing submissions.
-<li>
 <a href=https://crypto.iacr.org/2019/>CRYPTO 19</a>: conference August 17.
 <li>
 <a href=http://wine2019.cs.columbia.edu/>WINE 2019: The 15th Conference on Web and Internet Economics</a>: list of accepted papers published.
@@ -166,10 +164,11 @@ at the dates announced originally (3-7 May 2021).
 <li> <a href=https://conf.jnu.edu.cn/>Invited speaker at Inscrypt2020</a>
 <li>
 <a href=https://scn.unisa.it/scn22/>SCN 2022</a>:
-so many good submissions! bidding for papers! program is out!
+so many good submissions! bidding for papers! program is out! 
+conference was great!
 
-<li> EUROCRYPT 2023
-
+<li>
+<a href=https://eurocrypt.iacr.org/2023//>Eurocrypt 23</a>: reviewing submissions.
     
 </ul>
 
