--- a/index.html
+++ b/index.html
@@ -65,6 +65,15 @@ in beatiful Bertinoro.
 <b>Recent Papers</b>
 <ul>
 <li>
+<i>Dynamic Volume-Hiding Encrypted Multi-Maps with Applications to Searchable Encryption</i>
+<a href=https://doi.org/10.56553/popets-2023-0025>PETS 23</a>
+<br>
+[<a href="javascript:toggle('abstract4');">Show/Hide abstract</a>]
+<div class="abstract" id="abstract4" style="display:none;">
+We study encrypted storage schemes where a client outsources data to an untrusted third-party server (such as a cloud storage provider) while maintaining the ability to privately query and dynamically update the data. We focus on encrypted multi-maps (EMMs), a structured encryption (STE) scheme that stores pairs of label and value tuples. EMMs allow queries on labels and return the associated value tuple. As responses are variable-length, EMMs are subject to volume leakage attacks introduced by Kellaris et al. [CCS'16]. To prevent these attacks, volume-hiding EMMs were introduced by Kamara and Moataz [Eurocrypt'19] that hide the label volumes (i.e., the value tuple lengths). As our main contribution, we present the first fully dynamic volume-hiding EMMs that are both asymptotically and concretely efficient. Furthermore, they are simultaneously forward and backward private which are the de-facto standard security notions for dynamic STE schemes. Additionally, we implement our schemes to showcase their concrete efficiency. Our experimental evaluations show that our constructions are able to add dynamicity with minimal to no additional cost compared to the prior best static volume-hiding schemes of Patel et al. [CCS'19].
+</div>
+
+<li>
 <i>Lower Bound Framework for Differentially Private and Oblivious Data Structures</i>.
 <a href=https://ia.cr/2022/1553>Eurocrypt 2023</a>
 <br>
@@ -182,7 +191,7 @@ so many good submissions! bidding for papers! program is out!
 conference was great!
 
 <li>
-<a href=https://eurocrypt.iacr.org/2023//>Eurocrypt 23</a>: reviewing submissions.
+<a href=https://eurocrypt.iacr.org/2023//>Eurocrypt 23</a>: reviewing submissions. 111 papers accepted out of 418 submitted.
     
 </ul>
 
